# fourier_stm

./: README.md
board/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  fourier.ioc
board/Core/Inc/: circular_buffer.h  communicator.hpp  fft.hpp  main.hpp  message_definitions.hpp  receiver.hpp  stm32f4xx_it.h
board/Core/Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
board/Core/Startup/: startup_stm32f401retx.s
host/: README.md  a.sh  main.cpp  recv.cpp  vis.cpp
host/include/: fft.hpp  main.hpp  receiver.hpp  tl-expected.hpp
host/include/simple_fft/: copy_array.hpp  fft.h  fft_impl.hpp
recv/: .clang-format  CMakeLists.txt  a.sh  test.cpp
recv/include/: message_definitions.hpp  sender.hpp  to_string.hpp
recv/include/simple_fft/: fft.hpp
